--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>EchoBot</title>
+    <title>Hermione Bot</title>
 </head>
 <body>
     Hello world! This is the HermioneBot home page :)
