Test without raw=true parameter.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
     Hello world! This is the EchoBot home page :)
-    <img src="images/bot.png?raw=true" />
+    <img src="images/bot.png" />
 </body> 
 </html>
