Restore bot home page.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,92 @@
+<!DOCTYPE html>
 <html>
-<head>
-    <title>EchoBot</title>
-</head>
-<body>
-    Hello world! This is the EchoBot home page :)
-    <img src="images/bot.png" />
-</body> 
+  <head>
+    <meta charset="utf-8">
+    <title>Bot Hermoine</title>
+<link rel="stylesheet" href="css/bootstrap.min.css" media="screen" charset="utf-8">
+<link rel="stylesheet" href="css/myprofile.css" media="screen" charset="utf-8">
+<link href='https://fonts.googleapis.com/css?family=Lato:400,700,700italic,300' rel='stylesheet' type='text/css'>  </head>
+  <body>
+
+    <div class = "container-fluid">
+      <div class= "row nav">
+      <ul>
+        <li>ABOUT</li>
+        <li>PRIVACY</li>
+        <li>CONTACT</li>
+</ul>
+      </div>
+      </ul>
+    </div>
+    <div class="gray"></div>
+
+  <div class="container main">
+    <div class="row">
+      <h3>BOT <span class="special">HERMIONE</span></h3>
+    </div>
+</div>
+
+<div class = "container">
+  <img src="images/bot.png" class="img-responsive center-block" id="profile" alt="Responsive image">
+</div>
+
+
+  <div class="container hogwarts">
+  <h5>The smartest bot at Hogwarts.</h5>
+
+</div>
+
+<div class="container">
+  <div class="row">
+
+  <div class="col-md-3 col-xs-1 col-lg-3"></div>
+  <div class="col-md-6 col-xs-10 col-lg-6" id="paragraph">
+    <p class="basis"> Learning to Code? Have a question and need an clear answer? Let Hermione help you on your journey from ordinary muggle to wizardly programmer through code samples, definitions, and case uses.
+    </p>
+  </div>
+<div class="col-md-3 col-xs-1 col-lg-3"></div>
+</div>
+</div>
+
+
+<div class="gray"></div>
+<div class = "container-fluid" id="projects">
+
+       <div class="row">
+  <h4>What can Hermione do?</h4>
+        <div class="col-md-4 col-sm-6">
+          <div class="image"><p class="fill">snippets</p></div><!--soon remove div and put image in place-->
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <div class="image"><p class="fill">definitions</p></div><!--soon remove div and put image in place-->
+      </div>
+        <div class="col-md-4 col-sm-6">
+            <div class="image"><p class="fill">examples</p></div><!--soon remove div and put image in place-->
+        </div>
+      </div>
+    </div>
+<div class="gray"></div>
+
+
+
+
+
+  <div class = "last">
+
+
+        <div><a href= "https://wwcrenotahoe.slack.com/apps/manage/A12R7DJJJ-hermionebot"><img src="images/button.png" class="img-responsive center-block slack"  alt="Responsive image"></a></div><!--soon remove div and put image in place-->
+
+      <div><p class="privacy">Privacy policy is maintained by microsoft services. Microsoft shares your personal data with your consent or as necessary to complete any transaction or provide any service you have requested or authorized. </p></div><!--soon remove div and put image in place-->
+  </div>
+  </div>
+
+  <div class="castle">
+    <div><img src="images/castle.png" class="img-responsive center-block" alt="Responsive image"></div><!--soon remove div and put image in place-->
+  </div>
+
+
+</div>
+
+
+  </body>
 </html>
